--- a/pom.xml
+++ b/pom.xml
@@ -300,6 +300,11 @@
                 <artifactId>swagger-request-validator-core</artifactId>
                 <version>${swagger-request-validator.version}</version>
             </dependency>
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>3.2.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
